[project]
name = "travel-planner"
version = "0.1.0"
description = "Creating a Travel Planner App which creates travel recommendation based on various inputs."
authors = [
    {name = "Samiran Dutta",email = "samiran.dutta71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "langchain-anthropic (>=1.4.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "openai (>=2.31.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "langgraph-checkpoint (>=4.0.1,<5.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
